# gexiv2-sys

./: Cargo.toml  build.rs
examples/: preview_properties.rs  xmp_packet_access.rs
src/: glue.cpp  lib.rs  test.rs
