[package]
name = "gexiv2-sys"
description = """
This crate provides Rust FFI declarations for the gexiv2 library, which is a
GObject-based wrapper around Exiv2, which provides read and write access to the
Exif, XMP, and IPTC metadata in media files. Only FFI declarations are provided
here; for a usable Rust library, consider the `rexiv2` crate.
"""

version = "1.4.0"
authors = ["Felix Crux <felixc@felixcrux.com>"]
license = "GPL-3.0+"
documentation = "https://felixcrux.com/files/doc/gexiv2_sys/"
homepage = "https://github.com/felixc/gexiv2-sys"
repository = "https://github.com/felixc/gexiv2-sys"
keywords = ["metadata", "exif", "iptc", "xmp", "photo"]
categories = ["external-ffi-bindings", "multimedia::images"]
readme = "README.md"
links = "gexiv2"
build = "build.rs"

edition = "2021"
rust-version = "1.63"

include = [
  "Cargo.toml",
  "README.md",
  "CHANGELOG",
  "LICENSE",
  "SETUP.md",
  "src/**/*",
  "build.rs",
]

[dependencies]
libc = "0.2"
bitflags = { version = "1.3", optional = true}
glib-sys = { version = "0.16", optional = true }

[build-dependencies]
pkg-config = "0.3"
cc = "1.0"

[dev-dependencies]
tempfile = "3.3"

[features]
raw-tag-access = ["glib-sys"]
xmp-packet-access = ["bitflags"]
